# testing-talk

./: README.md  conftest.py  example.py  example2.py  fibs.py  primes.py  pyproject.toml  requirements.txt  test_example.py  test_example2.py  test_example2_with_hypothesis.py  test_example_with_hypothesis.py  test_partial_cov.py
.github/workflows/: black.yml  python-app.yml
html/: talk.html
src/: talk.md
